# colmap

./: .appveyor.yml  .clang-format  .clang-tidy  .clangd  .dockerignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  AGENTS.md  CHANGELOG.rst  CHANGELOG.txt  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  COPYING.txt  Colmap_Colab_TPU_GPU_v1.ipynb  LocalConfigExample.cmake  PULL_REQUEST_TEMPLATE.md  README.md  README.rocm.md  TODO  docker.sh  docker_lidar.sh  local_cibuildwheel.sh  pyproject.toml  ransac.py  ruff.toml  vcpkg-configuration.json  vcpkg.json
benchmark/runtime/: CMakeLists.txt  README.md  bundle_adjustment.cc  bundle_adjustment_convergence.cc  cost_functions.cc  fundamental_matrix_degensac.cc  global_positioning.cc  imu_preintegration_cost_function.cc  incremental_mapping.cc  relative_pose.cc  run_hash_map_experiment.sh  summarize_hash_map_experiment.py
lib/: CMakeLists.txt
lib/FLANN/: CMakeLists.txt  flann.cpp  flann.hpp
lib/Graclus/: CMakeLists.txt  LICENSE
lib/LSD/: CMakeLists.txt
lib/PBA/: CMakeLists.txt  ConfigBA.cpp  CuTexImage.cpp  DataInterface.h  ProgramCU.cu  ProgramCU.h  SparseBundleCPU.cpp  SparseBundleCPU.h  SparseBundleCU.cpp  pba.cpp  pba.h  util.h
lib/PoissonRecon/: Array.inl  BinaryNode.h  CMakeLists.txt  CmdLineParser.h  Factor.cpp  Geometry.h  Hash.h  MAT.h  MAT.inl  MarchingCubes.h  MultiGridOctreeData.Evaluation.inl  MultiGridOctreeData.IsoSurface.inl  MultiGridOctreeData.SortedTreeNodes.inl  MultiGridOctreeData.WeightedSamples.inl  Octree.h  PPolynomial.inl  Ply.h  PointStream.h  PointStream.inl  PoissonRecon.cpp  PoissonRecon.h  SparseMatrix.h  SurfaceTrimmer.cpp
lib/SQLite/: CMakeLists.txt
lib/SiftGPU/: CLTexImage.cpp  CLTexImage.h  CMakeLists.txt  CuTexImage.cpp  CuTexImage.h  FrameBufferObject.cpp  GLTexImage.h  LiteWindow.h  ProgramCL.h  ProgramCU.cu  ProgramGLSL.cpp  PyramidCL.cpp  PyramidCL.h  PyramidCU.cpp  PyramidCU.h  PyramidGL.cpp  PyramidGL.h  ShaderMan.cpp  SiftGPU.cpp  SiftGPU.h  SiftMatch.cpp
lib/VLFeat/: CMakeLists.txt  aib.c  aib.h  array.c  array.h  covdet.h  dsift.h  fisher.c  float.h  generic.h  getopt_long.h  heap-def.h  hikmeans.c  homkermap.h  host.c  ikmeans.h  imopv_sse2.h  kdtree.c  kdtree.h  kmeans.c  kmeans.h  lbp.h  liop.c  mathop.c  mathop.h  mathop_sse2.h  pgm.c  pgm.h  random.c  rodrigues.c  rodrigues.h  scalespace.c  shuffle-def.h  sift.c  sift.h  svmdataset.c
pycolmap/: .gitignore  CMakeLists.txt  README.md  custom_bundle_adjustment.py  custom_incremental_mapping.py  example.py  example_substeps.py  generate_stubs.sh  incremental_build.sh  pyproject.toml
pycolmap/ci/: install-centos.sh  install-colmap-almalinux.sh  install-colmap-centos.sh  install-colmap-macos.sh  install-colmap-windows.ps1  install-macos.sh  install-windows.ps1  vcpkg-dependencies.txt
pycolmap/examples/: custom_bundle_adjustment.py  custom_incremental_mapping.py  custom_incremental_pipeline.py  custom_incremental_pipeline_test.py  example.py  requirements.txt  write_pose_priors_to_database.py
pycolmap/pycolmap/: __init__.py  log_exceptions.h  utils.py
python/: CMakeLists.txt  README.md  build.sh  build_wheel_locally.sh  generate_stubs.sh  generate_stubs_test.py  incremental_build.sh  test_numpy_types.py
python/ci/: install-colmap-almalinux.sh  install-colmap-macos.sh  install-colmap-windows.ps1  test-colmap-windows.ps1  test_regression_eth3d.py  update_pyproject_toml.py
python/examples/: conftest.py  custom_bundle_adjustment.py  custom_incremental_pipeline.py  custom_incremental_pipeline_test.py  example.py  geocalib_inference.py  legacy_rotation_averaging_io.py  panorama_geometric_verification.py  panorama_sfm.py  panorama_sfm_native.py  panorama_sfm_native_pycolmap.py  vi_optimization.py  visualize_model.py
python/pycolmap/: __init__.py  utils.py
python/util/: flickr_downloader.py
src/: CMakeLists.txt  SConstruct  common.hh
src/base/: CMakeLists.txt  ExpLoss.cc  ExpLoss.hh  bundle_adjustment.cc  bundle_adjustment.h  camera.cc  camera.h  camera_database.cc  camera_database.h  camera_database_test.cc  camera_models.cc  camera_models.h  camera_models_test.cc  camera_rig.cc  camera_rig.h  camera_rig_test.cc  camera_test.cc  correspondence_graph.cc  correspondence_graph.h  correspondence_graph_test.cc  cost_functions.h  cost_functions_test.cc  database.cc  database.h  database_cache.cc  database_cache.h  database_cache_test.cc  database_test.cc  essential_matrix.cc  essential_matrix.h  essential_matrix_test.cc  feature.cc  feature.h  feature_extraction.cc  feature_extraction.h  feature_extraction_test.cc  feature_matching.cc  feature_matching.h  feature_matching_test.cc  feature_test.cc  (+67 more)
src/colmap/: CMakeLists.txt
src/controllers/: CMakeLists.txt  automatic_reconstruction.cc  automatic_reconstruction.h  bundle_adjustment.cc  bundle_adjustment.h  full_mapper.cc  full_mapper.h  gps_align_bundle_adjustment.cc  gps_align_bundle_adjustment.h  hierarchical_mapper.cc  hierarchical_mapper.h  incremental_mapper.cc  incremental_mapper.h
src/estimators/: CMakeLists.txt  absolute_pose.cc  absolute_pose.h  absolute_pose_test.cc  affine_transform.cc  affine_transform.h  affine_transform_test.cc  coordinate_frame.cc  coordinate_frame.h  coordinate_frame_test.cc  epnp.cc  epnp.h  epnp_test.cc  essential_matrix.cc  essential_matrix.h  essential_matrix_coeff.h  essential_matrix_coeffs.h  essential_matrix_poly.h  essential_matrix_test.cc  euclidean_transform.h  fundamental_matrix.cc  fundamental_matrix.h  fundamental_matrix_test.cc  generalized_absolute_pose.cc  generalized_absolute_pose.h  generalized_absolute_pose_coeffs.cc  generalized_absolute_pose_coeffs.h  generalized_absolute_pose_test.cc  generalized_relative_pose.cc  generalized_relative_pose.h  generalized_relative_pose_test.cc  gp3p.cc  gp3p.h  gp3p_coeffs.cc  gp3p_coeffs.h  gp3p_test.cc  homography_matrix.cc  homography_matrix.h  homography_matrix_test.cc  p3p.cc  (+15 more)
src/exe/: CMakeLists.txt  automatic_reconstructor.cc  binarize_model.cc  bundle_adjuster.cc  colmap.cc  color_extractor.cc  database.cc  database.h  database_creator.cc  dense_fuser.cc  gui.cc  (+42 more)
(+2320 files in other folders)
